-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 15
-
Component/s: hotspot
-
b18
For instance running:
java -jar ./jmh-octane.jar -f 1 -wi 5 -i 5 oracle.micro.benchmarks.script.octane.Box2DBench.test
performs poorly (300 ms/op instead of 50 ms/op) because C2 bails out of compilation for hottest method.
java -jar ./jmh-octane.jar -f 1 -wi 5 -i 5 oracle.micro.benchmarks.script.octane.Box2DBench.test
performs poorly (300 ms/op instead of 50 ms/op) because C2 bails out of compilation for hottest method.
- relates to
-
JDK-8238691 C2: turn subtype check into macro node
-
- Resolved
-