8239072: subtype check macro node causes node budget to be exhausted

Reviewed-by: vlivanov, kvn